--- a/MyTrade/Views/Home/ForgetPassword.cshtml
+++ b/MyTrade/Views/Home/ForgetPassword.cshtml
@@ -55,10 +55,10 @@
                                 @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "LoginId" })
 
                                 <div class="d-flex justify-content-between">
-                                    <label for="password">Email</label>
+                                    <label for="password">Mobile</label>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email Id" })
+                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", @Placeholder = "Mobile No" })
                             </div>
                             <div class="d-sm-flex justify-content-between">
                                 <div class="field-wrapper">
@@ -92,9 +92,9 @@
     });
     function validateform() {
         $(".errortext").removeClass("errortext");
-        if ($('#Email').val() == '') {
-            $("#Email").addClass('errortext');
-            $('#Email').focus();
+        if ($('#MobileNo').val() == '') {
+            $("#MobileNo").addClass('errortext');
+            $('#MobileNo').focus();
             return false;
         }
         $("#divload").css({ 'display': '' });
