--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -123,7 +123,8 @@
                                         <th></th>
                                         <th></th>
                                         @*<th hidden="hidden"></th>*@
-                                        @*<th></th>*@
+                                        <th>Hold/Unhold TPS</th>
+                                        <th>Withdrawal Start/Stop</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -184,6 +185,35 @@
                                                             </a>
                                                         }
                                                     </td>
+                                                    <td>
+                                                        @if (Item.IsHoldTPS == "False")
+                                                        {
+                                                            <a href="/AdminReports/HoldTPS?FK_UserID=@Item.Fk_UserId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to TPS HOLD this User ?')">
+                                                                Hold TPS
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="/AdminReports/UnHoldTPS?FK_UserID=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Sure you want to TPS UNHOLD this User ?')">
+                                                                UnHold TPS
+                                                            </a>
+                                                        }
+                                                       
+                                                    </td>
+                                                    <td>
+                                                        @if (Item.WithdrawalStatus == "False")
+                                                        {
+                                                            <a href="/AdminReports/StopWithdrawal?Fk_UserId=@Item.Fk_UserId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to Stop WithDrawal this User ?')">
+                                                                Stop WithDrawal
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="/AdminReports/StartWithdrawal?Fk_UserId=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Sure you want to Start WithDrawal this User ?')">
+                                                                Start WithDrawal
+                                                            </a>
+                                                        }
+                                                    </td>
                                                     @*<td>
                                                             <a href="/AdminProfile/WelcomeLetter?LoginID=@Item.LoginId" class="btn btn-info btn-sm">
                                                                 Print
@@ -218,9 +248,6 @@
     var f3 = flatpickr(document.getElementById('ToDate'), {
         //mode: "range"
     });
-
-
-
     if ($("#MStatus").val() != 0) {
         $("#MemberStatus").val($("#MStatus").val()).attr("selected", "selected")
     }
