--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
-                        <p style="color:red">Note : 2% Transfer Charges And Minimum Rs. 10</p><br />
+                        <p style="color:red">Note : Rs 10 Transfer Charges And 5% TDS Charge</p><br />
                         <div class="row">
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
@@ -154,8 +154,8 @@
             $('#Amount').focus();
             return false;
         }
-        if (parseFloat($("#Amount").val()) < 100) {
-            alert("Transfer amount should not be less than 100 Rs.");
+        if (parseFloat($("#Amount").val()) < 1000) {
+            alert("Transfer amount should not be less than 1000 Rs.");
             $('#Amount').val('');
             return false;
         }
@@ -164,16 +164,31 @@
 
     function GetFinalAmount() {
         debugger;
-        var deductionAmount = parseFloat($("#Amount").val()) * 0.02;
-        if (parseFloat($("#Amount").val()) < 500) {
-            deductionAmount = 10;
+        if (parseFloat($("#Amount").val()) < 1000 || parseFloat($("#Amount").val()) > 49000) {
+            alert("Amount should be between or equal to  1000 and  49000");
+            $('#Amount').val('');
+            $("#Amount").addClass('errortext');
+            $('#Amount').focus();
+            return false;
         }
+        var deductionAmount = parseFloat($("#Amount").val()) * 0.05 + 10;
+        //if (parseFloat($("#Amount").val()) < 1000) {
+        //    alert("Amount should be in multiple of 1000 Rs.");
+        //    $('#Amount').val('');
+        //    return false;
+        //    //deductionAmount = 10;
+        //}
+        //if (parseFloat(deductionAmount) < 10)
+        //{
+        //    deductionAmount = 10;
+        //}
         if (parseInt($("#Amount").val()) % 100 != 0)
         {
-            alert("Amount should be in multiple of 100 Rs.");
+            alert("Amount should be in multiple of 1000 Rs.");
             $('#Amount').val('');
             return false;
         }
+        
         $("#lbld").text(parseFloat(deductionAmount));
         var finalAmount = parseFloat($("#Amount").val()) + parseFloat(deductionAmount);
         $("#lblf").text(parseFloat(finalAmount));
