--- a/MyTrade/Views/AdminReports/TDSReport.cshtml
+++ b/MyTrade/Views/AdminReports/TDSReport.cshtml
@@ -58,7 +58,7 @@
                                         <th>Sr No.</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>Bisuness Amount</th>
+                                        <th>TDS Amount</th>
                                         <th>Date</th>
                                     </tr>
                                 </thead>
