--- a/MyTrade/Views/AdminReports/JoiningPackageReport.cshtml
+++ b/MyTrade/Views/AdminReports/JoiningPackageReport.cshtml
@@ -29,13 +29,13 @@
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label> From Date</label>
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @Placeholder = "dd/mm/yyyy" })
+                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @Placeholder = "dd/mm/yyyy",@readonly=true })
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
                                     <label> To Date</label>
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "dd/mm/yyyy" })
+                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @Placeholder = "dd/mm/yyyy", @readonly = true })
                                 </div>
                             </div>
                             <div class="col-lg-3" style="margin-top:15px;">
@@ -89,25 +89,24 @@
         </div>
     </div>
 }
-<script src="~/plugins/flatpickr/flatpickr.js"></script>
-<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 <script>
-    var f3 = flatpickr(document.getElementById('FromDate'),
-        {
-            // mode: "range"
-        });
-    var f3 = flatpickr(document.getElementById('ToDate'),
-        {
-            // mode: "range"
-        });
+    jQuery.noConflict();
+    $('#FromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear:true
 
-    function isNumberKey(evt) {
+    });
+    jQuery.noConflict();
+    $('#ToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
 
-        var charCode = (evt.which) ? evt.which : event.keyCode;
-        if (charCode != 46 && charCode > 31
-          && (charCode < 48 || charCode > 57))
-            return false;
-
-        return true;
-    }
+    });
+ 
     </script>
