--- a/MyTrade/Views/AdminReports/JoiningPackageReport.cshtml
+++ b/MyTrade/Views/AdminReports/JoiningPackageReport.cshtml
@@ -50,6 +50,8 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>SponsorId</th>
+                                        <th>Sponsor Name</th>
                                         <th>LoginId</th>
                                         <th>Name</th>
                                         <th>Pin Amount</th>
@@ -67,8 +69,9 @@
                                             foreach (var Item in Model.lstWalletLedger)
                                             {
                                                 <tr class="text-left">
-                                                 
                                                     <td>@i</td>
+                                                    <td>@Item.SponsorId</td>
+                                                    <td>@Item.SponsorName</td>
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
                                                     <td>@Item.Amount</td>
