--- a/MyTrade/Views/AdminReports/TDSReport.cshtml
+++ b/MyTrade/Views/AdminReports/TDSReport.cshtml
@@ -58,6 +58,8 @@
                                         <th>Sr No.</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
+                                        <th>Pan NO</th>
+                                        <th>Mobile</th>
                                         <th>TDS Amount</th>
                                         <th>Date</th>
                                     </tr>
@@ -74,6 +76,8 @@
                                                     <td>@i</td>
                                                     <td>@Item.LoginId</td>
                                                     <td>@Item.Name</td>
+                                                    <td>@Item.PanNo</td>
+                                                    <td>@Item.Mobile</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Date</td>
                                                 </tr>
