--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -72,6 +72,7 @@
                                         <th>Name</th>*@
                                         <th>Gross Amount</th>
                                         <th>Procesing Charges</th>
+                                        <th>TDS Amount</th>
                                         <th>Net Amount</th>
                                         <th>Date</th>
                                         <th>IFSC Code</th>
@@ -96,6 +97,7 @@
                                                     <td>@Item.Name</td>*@
                                                     <td>@Item.GrossAmount</td>
                                                     <td>@Item.ProcessingFee</td>
+                                                    <td>@Item.TDSAmount</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Date</td>
                                                     <td>@Item.IFSCCode</td>
