--- a/MyTrade/Views/Master/RewardMaster.cshtml
+++ b/MyTrade/Views/Master/RewardMaster.cshtml
@@ -49,7 +49,15 @@
 
                             <div class="col-lg-4 col-md-3">
                                 <div class="form-group">
-                                    <input type="submit" class="btn btn-success" id="save" name="save" value="Save" onclick="return Validationform();"/>
+                                    @if (Model.PK_RewardId != null)
+                                    {
+                                        @Html.HiddenFor(m=>m.PK_RewardId)
+                                        <input type="submit" class="btn btn-success" id="Update" name="Update" value="Upadate" onclick="return Validationform();" />
+                                    }
+                                    else
+                                    {
+                                        <input type="submit" class="btn btn-success" id="save" name="save" value="Save" onclick="return Validationform();" />
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -60,17 +68,25 @@
     </div>
 }
 
-<script src="~/plugins/flatpickr/flatpickr.js"></script>
-<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 <script>
-    var f3 = flatpickr(document.getElementById('FromDate'),
-        {
-            // mode: "range"
-        });
-    var f3 = flatpickr(document.getElementById('ToDate'),
-        {
-            // mode: "range"
-        });
+    jQuery.noConflict();
+    $('#FromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear:true
+
+    });
+    jQuery.noConflict();
+    $('#ToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
+
+    });
 
 </script>
 <script>
