--- a/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
+++ b/MyTrade/Views/Admin/DistributePaymentTPS.cshtml
@@ -52,7 +52,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <table id="html5-extension" class="table table-hover non-hover",data-page-length='25'>
+
+                            <table id="html5-extension" class="table table-hover non-hover" ,data-page-length='25'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -60,9 +61,9 @@
                                         <th>Name</th>
                                         <th>TPS</th>
                                         <th>Gross Amount</th>
-                                        <th>TDS Amount</th>
-                                        <th>Processing</th>
-                                        <th>Net Amount</th>
+                                        @*<th>TDS Amount</th>
+                                            <th>Processing</th>
+                                            <th>Net Amount</th>*@
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -79,9 +80,9 @@
                                                     <td>@Item.Name</td>
                                                     <td>@Item.TPS</td>
                                                     <td>@Item.GrossAmount</td>
-                                                    <td>@Item.ProcessingFee</td>
-                                                    <td>@Item.TDSAmount</td>
-                                                    <td>@Item.NetAmount</td>
+                                                    @*<td>@Item.ProcessingFee</td>
+                                                        <td>@Item.TDSAmount</td>
+                                                        <td>@Item.NetAmount</td>*@
                                                 </tr>
                                                 i++;
                                             }
@@ -95,12 +96,13 @@
                                         <th></th>
                                         <th>@ViewBag.TPS </th>
                                         <th>@ViewBag.GrossIncome</th>
-                                        <th>@ViewBag.Processing</th>
+                                        @*<th>@ViewBag.Processing</th>
                                         <th>@ViewBag.TDS</th>
-                                        <th>@ViewBag.NetIncome</th>
+                                        <th>@ViewBag.NetIncome</th>*@
                                     </tr>
                                 </tfoot>
                             </table>
+
                         </div>
                     </div>
                 </div>
@@ -111,11 +113,11 @@
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script>
-  
+
     var f3 = flatpickr(document.getElementById('ClosingDate'),
         {
-       // mode: "range"
-      });
+            // mode: "range"
+        });
 
     function Validate() {
         $(".errortext").removeClass("errortext");
@@ -126,8 +128,6 @@
         }
     }
 </script>
-
-
 
 
 
