--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
-                        <p style="color:red">Note : Rs 10 Transfer Charges And 5% TDS Charge</p><br />
+                        <p style="color:red">Note : 2% Transfer Charges And 5% TDS Charge</p><br />
                         <div class="row">
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
@@ -173,7 +173,7 @@
             $('#Amount').focus();
             return false;
         }
-        var deductionAmount = parseFloat($("#Amount").val()) * 0.05 + 10;
+        var deductionAmount = parseFloat($("#Amount").val()) * 0.05 + parseFloat($("#Amount").val()) * 0.02;
         //if (parseFloat($("#Amount").val()) < 1000) {
         //    alert("Amount should be in multiple of 1000 Rs.");
         //    $('#Amount').val('');
