--- a/MyTrade/Views/User/PayoutRequest.cshtml
+++ b/MyTrade/Views/User/PayoutRequest.cshtml
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
-                        <p style="color:red">Note : 2% Transfer Charges And 5% TDS Charge</p><br />
+                        <p style="color:red">Note : 2% Procecing Charges And 5% TDS Charge</p><br />
                         <div class="row">
                             <div class="col-lg-3 col-md-3">
                                 <div class="form-group">
@@ -55,7 +55,7 @@
                             </div>
                             <div class="col-lg-6 col-md-6" style="margin-top:28px">
                                 <div class="form-group">
-                                    <h6 style="color:red">Transfer Charges:  <label id="lbld" style="color:red;">0</label></h6><br />
+                                    <h6 style="color:red">Total Charges:  <label id="lbld" style="color:red;">0</label></h6><br />
                                     <h6 style="color:green">
                                         Gross Amount to be deducted:  <span id="lblf" style="color:green;">0</span>
                                     </h6>
