--- a/MyTrade/Views/User/TopUpList.cshtml
+++ b/MyTrade/Views/User/TopUpList.cshtml
@@ -15,7 +15,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                    <h4>TopUp List</h4>
+                                    <h4>MTG Coin TopUp List</h4>
                                     <span class="text-danger">
                                         @TempData["Package"]
                                     </span>
@@ -47,7 +47,7 @@
                                             <th>S No.</th>
                                             <th>Name</th>
                                             <th>Product Name</th>
-                                            <th>Topup Amount</th>
+                                            <th>Topup MTG Coin</th>
                                             @*<th>Used For</th>*@
                                             <th>BV</th>
                                             @*<th>Is Calculated</th>*@
